--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "classnames": "^2.2.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "babel-jest": "^24.3.1",
-    "babel-preset-env": "^1.7.0",
     "jest": "^24.3.1",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "styled-components": "^4.1.3"
   }
 }
